Bug 499558 - "New signature UI with inconsistent "deactive" state if box is checked without file specified" [r=Standard8 sr=neil]